# stealer-parser

./: .env.example  CONTRIBUTING.md  README.md  pyproject.toml
stealer_parser/: database.py  main.py
stealer_parser/parsing/: lexer_passwords.py  parsing_passwords.py
