[project]
name = "stealer-parser"
version = "1.0.0"
description = "Infostealer logs parser."
authors = [
    {name = "matya", email = "135035586+m4tya@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0.1",
    "py7zr>=0.21.0",
    "rarfile>=4.2",
    "verboselogs>=1.7",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
stealer_parser = "stealer_parser.main:main"

[dependency-groups]
dev = [
    "pycodestyle>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
